# PaperAlchemy

./: .env.example  .env.test  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  architecture.drawio  compose.yml  design.md  gradio_launcher.py  pyproject.toml  roadmap.md
.claude/: CLAUDE.md
.claude/commands/: check-spec-deps.md  create-spec.md  implement-spec.md  start-spec-dev.md  verify-spec.md
.github/workflows/: ci.yml  export-drawio.yml
airflow/dags/: .airflowignore  arxiv_paper_ingestion.py
alembic/: env.py
alembic/versions/: 7fa2bf4a9f17_create_papers_table.py  add_analysis_columns_to_papers.py
docs/: ops-guide.md  spec-summaries.md
frontend/: package.json  pnpm-lock.yaml
notebooks/specs/: S1.1_dependency.ipynb  S1.2_config.ipynb  S1.3_docker.ipynb  S1.4_cicd.ipynb  S2.1_app_factory.ipynb  S2.2_database.ipynb  S2.3_error_handling.ipynb  S2.4_di.ipynb  S3.1_paper_model.ipynb  S3.2_arxiv_client.ipynb  S3.3_pdf_parser.ipynb  S3.4_ingestion.ipynb  S4.1_opensearch.ipynb  S4.2_chunker.ipynb  S4.3_embeddings.ipynb  S4.4_hybrid_search.ipynb  S4b.1_reranker.ipynb  S4b.2_hyde.ipynb  S4b.3_multi_query.ipynb  S4b.4_parent_child.ipynb  S4b.5_retrieval_pipeline.ipynb  S5.1_llm_client.ipynb  S5.2_rag_chain.ipynb  S5.3_streaming.ipynb  S5.4_caching.ipynb  S5.5_citations.ipynb  S6.1_agent_state.ipynb  S6.2_guardrail.ipynb  S6.3_retrieval.ipynb  S6.4_grading.ipynb  S6.5_rewrite.ipynb  S6.6_generation.ipynb  S6.7_orchestrator.ipynb  S6.8_specialized.ipynb  S7.1_chat_memory.ipynb  S7.2_follow_up.ipynb  S7.3_chat_api.ipynb  S8.1_upload.ipynb  S8.2_summary.ipynb  S8.3_highlights.ipynb  (+5 more)
notebooks/week1/: week1_infrastructure.ipynb
notebooks/week2/: week2_arxiv_integration.ipynb
notebooks/week3/: README.md  week3_opensearch.ipynb
notebooks/week4/: README.md  week4_hybrid_search.ipynb
notebooks/week5/: README.md  week5_complete_rag_system.ipynb
notebooks/week6/: README.md  week6_caching_and_tracing.ipynb
specs/spec-S1.1-dependency-declaration/: checklist.md  spec.md
specs/spec-S1.2-environment-config/: checklist.md  spec.md
specs/spec-S1.3-docker-infrastructure/: checklist.md  spec.md
specs/spec-S1.4-ci-cd-setup/: checklist.md  spec.md
specs/spec-S13.1-landing-page/: checklist.md  spec.md
specs/spec-S13.2-design-system/: checklist.md  spec.md
specs/spec-S13.3-chat-ux-polish/: checklist.md  spec.md
specs/spec-S13.4-search-discovery/: checklist.md  spec.md
specs/spec-S13.5-sidebar-navigation/: checklist.md  (+1 more)
src/: config.py  dependency.py  exceptions.py  gradio_app.py  main.py  middlewares.py
(+522 files in other folders)
